# evidence-gate-action

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  README.ja.md  README.md  RELEASING.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml  release.yml
.planning/phases/20-configuration-dx/: 20-03-SUMMARY.md
src/: config_loader.py  core.py  entrypoint.py  local_evaluator.py  presets.py  sticky_comment.py
tests/: conftest.py  test_action_yml.py  test_benchmarks.py  test_config_loader.py  test_core.py  test_entrypoint.py  test_local_evaluator.py  test_nemoclaw.py  test_presets.py  test_release_workflow.py  test_sticky_comment.py  test_upsell.py
