[project]
name = "evidence-gate-action"
version = "1.0.0"
description = "GitHub Action for Evidence Gate quality gates"
requires-python = ">=3.11"
license = "Apache-2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
